--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "install": "npm install --legacy-peer-deps",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,7 +13,8 @@
   "dependencies": {
     "@hookform/resolvers": "latest",
     "@react-pdf/renderer": "^4.3.0",
-    "@supabase/supabase-js": "^2.49.8",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.76.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
@@ -20,7 +22,7 @@
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
     "date-fns": "4.1.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
@@ -31,7 +33,7 @@
     "react": "^19",
     "react-dom": "^19",
     "react-export-table-to-excel": "^1.0.6",
-    "react-hook-form": "latest",
+    "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-iframe": "^1.8.5",
     "react-pdf": "^9.2.1",
@@ -53,5 +55,16 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
+  "main": "setup-env.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
